--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -1,14 +1,15 @@
 version: "3.0"
 services:
-  boilerplate:
+  bandpass-filter:
     build:
       context: ../
       dockerfile: docker/Dockerfile
     environment:
-      MODULE_NAME: "boilerplate"
+      MODULE_NAME: "bandpass-filter"
       MODULE_TYPE: "Processing"
       INGRESS_HOST: "0.0.0.0"
       INGRESS_PORT: "80"
-      EGRESS_URLS: "https://testdockercompose.free.beeceptor.com"
+      EGRESS_URLS: "https://testbandpass.free.beeceptor.com"
+      FREQUENCY_RANGES: "30-30000; 33000-34000"
     ports:
       - 80:80
