--- a/test/test.env
+++ b/test/test.env
@@ -1,6 +1,6 @@
 # REQUIRED MODULE SETTINGS
 
-MODULE_NAME=boilerplate
+MODULE_NAME=bandpass-filter
 MODULE_TYPE=Processing
 
 # REQUIRED API SETTINGS
