--- a/example.env
+++ b/example.env
@@ -1,6 +1,6 @@
 # REQUIRED MODULE SETTINGS
 
-MODULE_NAME=bandpass-filter
+MODULE_NAME=bandstop-filter
 MODULE_TYPE=Processing
 
 # REQUIRED API SETTINGS
@@ -12,4 +12,4 @@ EGRESS_URLS=https://hookb.in/example1,https://hookb.in/example2
 
 # YOU CAN ADD REMAINING MODULE SETTINGS BELOW
 
-FREQUENCY_RANGES="30-30000; 33000-34000"
+FREQUENCY_RANGES=30-30000; 33000-34000
