--- a/Module.yaml
+++ b/Module.yaml
@@ -1,16 +1,16 @@
-displayName: 'Bandpass Filter'       # Display name for the module that will be displayed in the UI.
-moduleName: 'bandpass-filter'        # Module name that will be used to reference the module, and uniquely identify the module and their versions.
-description: 'Module that filters abnormal frequencies'       # Module description that will be displayed in the UI.
+displayName: 'Bandstop Filter'       # Display name for the module that will be displayed in the UI.
+moduleName: 'bandstop-filter'        # Module name that will be used to reference the module, and uniquely identify the module and their versions.
+description: 'Module that filters out frequencies'       # Module description that will be displayed in the UI.
 versionName: 'v1.0.0'                    # Module version name that will be used to reference the module version, and uniquely identify the module version with a common name.
 isPublic: true                          # Boolean value that indicates if the module is Public or Private.
 categories:                             # Array of category that will be used to group the module in the UI.
   - 'Filter'
 type: 'Processing'      # Module type (Input, Processing, Output) that will be used to group the module in the UI.
 image:
-  name: 'weevenetwork/bandpass-filter'     # Image name from the docker registry.
+  name: 'weevenetwork/bandstop-filter'     # Image name from the docker registry.
   tag: 'v1.0.0'                               # Image tag from the docker registry.
-  homepage: 'https://hub.docker.com/r/weevenetwork/bandpass-filter'      # Image homepage from the docker registry.
-repository: 'https://github.com/weevenetwork/bandpass-filter'     # Repository URL to source code.
+  homepage: 'https://hub.docker.com/r/weevenetwork/bandstop-filter'      # Image homepage from the docker registry.
+repository: 'https://github.com/weevenetwork/bandstop-filter'     # Repository URL to source code.
 envs:                                   # Array of environment variables that will be used to configure the module. Also used to show related fields on the UI.
   - name: Frequency Ranges                   # name of the field to be displayed on the UI.
     key: FREQUENCY_RANGES                # key to set in the environment variables.
