--- a/Module.yaml
+++ b/Module.yaml
@@ -33,4 +33,4 @@ tags:                                   # Array of tags.
   - 'Filtering'
   - 'data'
   - 'signal'
-icon: 'https://some.url/to/icon.png'    # Icon URL that will be displayed in the UI.
+icon: 'https://icons-020-demo.s3.eu-central-1.amazonaws.com/mi_bandstop_filter_process.png'    # Icon URL that will be displayed in the UI.
